# ingestao-async

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: df9b0a86f041_criacao_inicial_das_tabelas.py
backend/app/: main.py
backend/app/api/v1/: deps.py
backend/app/api/v1/routes/: auth.py  jobs.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  dataset.py  job.py  user.py
backend/app/queue/: interface.py  postgres_queue.py
backend/app/schemas/: auth.py  job.py
backend/app/services/: auth_service.py  job_service.py
backend/app/worker/: main.py
backend/app/worker/handlers/: csv_handler.py  url_handler.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py  test_jobs.py
backend/tests/test_core/: test_config.py  test_database.py  test_logging.py  test_security.py
backend/tests/test_models/: test_models.py
backend/tests/test_queue/: test_postgres_queue.py
backend/tests/test_worker/: test_worker.py
docs/superpowers/plans/: 2026-06-28-ingestao-async.md
frontend/: index.html  package-lock.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BarChart.tsx  StatusBadge.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  SubmitPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
